--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="homepage.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,25 +15,50 @@
     
 
     <section class="header">
-        <div class="bar">
+        <div class="blur">
+            <div class="bar">
                 <header class="navbar">
                     <nav>
-                        <div class="logo_nav">
-                            <img src="img/SaithSerenLogo-removebg-preview.png" width="70" height="40">
-                        </div>
                         <div class="menu_nav">
                             <ul>
+                                <li><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></li>
                                 <li><a href="">Home</a></li>
                                 <li><a href="">About Us</a></li>
                                 <li><a href="">Pictures</a></li>
                                 <li><a href="">Calendar</a></li>
                                 <li><a href="">Become a Member</a></li>
                             </ul>
-
                         </div>
                     </nav>
                 </header>
             </div>
+
+            <div class="welcome">
+                <p>Welcome to Saith Seren!</p>
+            </div>
+
+            <div class="imglogowelcome">
+                <img src="img/SaithSerenLogo-removebg-preview.png">
+            </div>
+
+        </div>
+    </section>
+
+    <section class="aboutus">
+
+        <div class="aboutus_titre">
+            <p>About Us</p>
+        </div>
+
+        <div class="gauche">
+            <p>texte gauche</p>
+        </div>
+        <div class="milieu">
+            <p>texte milieu</p>
+        </div>
+        <div class="maps">
+
+        </div>
     </section>
 </body>
 </html>
