--- a/homepage.html
+++ b/homepage.html
@@ -51,14 +51,83 @@
         </div>
 
         <div class="gauche">
-            <p>texte gauche</p>
+            <p>Opening Hours<br>
+            Monday - Friday:<br>
+            4:30 - 11:00<br>
+            Saturday:<br>
+            12:00 - Midnight</p>
         </div>
         <div class="milieu">
-            <p>texte milieu</p>
+            <p>Y Saith Seren<br>
+            Canolfan Gymraeg Wrecsam<br>
+            18 Chester Street<br>
+            Wrecsam LL13 8BG<br>
+            Tel: 01978 447006</p>
         </div>
         <div class="maps">
 
         </div>
     </section>
+
+
+    <section class="offres">
+
+    <div class="proposals">
+        <p>What do we propose?</p>
+    </div>
+
+    <div class="row">
+        <div class="images">
+            <img src="img/food.jpg" width="450" height="250">
+            <div class="test">
+                <p>Food</p>
+            </div>
+        </div>
+
+        <div class="images">
+            <img src="img/boisson.jpg" width="450" height="250">
+            <div class="test">
+                <p>Drinks</p>
+            </div>
+        </div>
+
+        <div class="images">
+            <img src="img/sport.jpg" width="450" height="250">
+            <div class="test">
+                <p>Sports</p>
+            </div>
+        </div>
+    </div>
+    </section>
+
+
+    <section class="membership">
+        <div class="askmember">
+            <p>Become a member NOW!</p>
+        </div>
+
+        <button class="boutMem">Learn More</button>
+
+
+    </section>
+
+    <footer id="foot">
+        <div class="lefttext">
+            <p>Y Saith Seren<br>
+            Canolfan Gymraeg Wrecsam<br>
+            18 Chester Street<br>
+            Wrecsam LL13 8BG<br>
+            Tel: 01978 447006</p>
+        </div>
+
+        <div class="righttext">
+            <p>Follow us on Facebook!<br>
+            Contact us by Mail:<br>
+            7seren@gmail.com<br>
+            Or use our contact form!<br>
+            lien</p>
+        </div>
+    </footer>
+
 </body>
 </html>
