--- a/homepage.html
+++ b/homepage.html
@@ -111,7 +111,7 @@
 
     </section>
 
-    <footer id="foot">
+    <section class="footer">
         <div class="lefttext">
             <p>Y Saith Seren<br>
             Canolfan Gymraeg Wrecsam<br>
@@ -127,7 +127,7 @@
             Or use our contact form!<br>
             lien</p>
         </div>
-    </footer>
+    </div>
 
 </body>
 </html>
