--- a/homepage.html
+++ b/homepage.html
@@ -73,7 +73,7 @@
     <section class="offres">
 
     <div class="proposals">
-        <p>What do we propose?</p>
+        <p>What are we proposing?</p>
     </div>
 
     <div class="row">
