--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage - Saith Seren</title>
-    <link rel="stylesheet" href="homepage.css"> 
+    <link rel="stylesheet" href="aboutus.css"> 
 </head>
 <body>
 
@@ -22,8 +22,8 @@
                         <div class="menu_nav">
                             <ul>
                                 <li><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></li>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="aboutus.html">About Us</a></li>
+                                <li><a href="homepage.html">Home</a></li>
+                                <li><a href="#">About Us</a></li>
                                 <li><a href="">Pictures</a></li>
                                 <li><a href="">Calendar</a></li>
                                 <li><a href="">Become a Member</a></li>
@@ -33,72 +33,61 @@
                 </header>
             </div>
 
-            <div class="welcome">
-                <p>Welcome to Saith Seren!</p>
+            <div class="aboutus_titre">
+                <p>About Us</p>
             </div>
 
-            <div class="imglogowelcome">
-                <img src="img/SaithSerenLogo-removebg-preview.png">
+
+            <div class="gauche">
+                <p>Opening Hours<br>
+                Monday - Friday:<br>
+                4:30 - 11:00<br>
+                Saturday:<br>
+                12:00 - Midnight</p>
+            </div>
+            <div class="milieu">
+                <p>Y Saith Seren<br>
+                Canolfan Gymraeg Wrecsam<br>
+                18 Chester Street<br>
+                Wrecsam LL13 8BG<br>
+                Tel: 01978 447006</p>
+            </div>
+            <div class="maps">
+                <p>google maps a intégrer</p>
             </div>
 
-        </div>
+
+
+
+            </div>
     </section>
 
-    <section class="aboutus">
+   <section class="photos">
 
-        <div class="aboutus_titre">
-            <p>About Us</p>
-        </div>
-
-        <div class="gauche">
-            <p>Opening Hours<br>
-            Monday - Friday:<br>
-            4:30 - 11:00<br>
-            Saturday:<br>
-            12:00 - Midnight</p>
-        </div>
-        <div class="milieu">
-            <p>Y Saith Seren<br>
-            Canolfan Gymraeg Wrecsam<br>
-            18 Chester Street<br>
-            Wrecsam LL13 8BG<br>
-            Tel: 01978 447006</p>
-        </div>
-        <div class="maps">
-
-        </div>
-    </section>
-
-
-    <section class="offres">
-
-    <div class="proposals">
-        <p>What are we proposing?</p>
+    <div class="photos_titre">
+        <p>Photos of our Building!</p>
     </div>
+
 
     <div class="row">
         <div class="images">
-            <img src="img/food.jpg" width="450" height="250">
+            <img src="img/Saith_Seren_front.jpg" width="550" height="350">
             <div class="test">
-                <p>Food</p>
+                <p>At day...</p>
             </div>
         </div>
 
         <div class="images">
-            <img src="img/boisson.jpg" width="450" height="250">
+            <img src="img/saith_night.jpg" width="550" height="350">
             <div class="test">
-                <p>Drinks</p>
+                <p>...and at might!</p>
             </div>
         </div>
 
-        <div class="images">
-            <img src="img/sport.jpg" width="450" height="250">
-            <div class="test">
-                <p>Sports</p>
-            </div>
-        </div>
     </div>
-    </section>
+
+
+   </section>
 
 
     <section class="membership">
