--- a/membership.html
+++ b/membership.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage - Saith Seren</title>
-    <link rel="stylesheet" href="aboutus.css"> 
+    <link rel="stylesheet" href="membership.css"> 
 </head>
 <body>
 
@@ -23,7 +23,7 @@
                             <ul>
                                 <li><a href="homepage.html"><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></a></li>
                                 <li><a href="homepage.html">Home</a></li>
-                                <li><a href="#">About Us</a></li>
+                                <li><a href="aboutus.html">About Us</a></li>
                                 <li><a href="">Pictures</a></li>
                                 <li><a href="">Calendar</a></li>
                                 <li><a href="membership.html">Become a Member</a></li>
@@ -33,72 +33,31 @@
                 </header>
             </div>
 
-            <div class="aboutus_titre">
-                <p>About Us</p>
+            <div class="member_titre">
+                <p>Become a Member</p>
             </div>
-
-
-            <div class="gauche">
-                <p>Opening Hours<br>
-                Monday - Friday:<br>
-                4:30 - 11:00<br>
-                Saturday:<br>
-                12:00 - Midnight</p>
-            </div>
-            <div class="milieu">
-                <p>Y Saith Seren<br>
-                Canolfan Gymraeg Wrecsam<br>
-                18 Chester Street<br>
-                Wrecsam LL13 8BG<br>
-                Tel: 01978 447006</p>
-            </div>
-            <div class="maps">
-                <p>google maps a intégrer</p>
-            </div>
-
-
-
 
             </div>
     </section>
 
-   <section class="photos">
+   <section class="member_infos">
 
-    <div class="photos_titre">
-        <p>Photos of our Building!</p>
-    </div>
-
-
-    <div class="row">
-        <div class="images">
-            <img src="img/Saith_Seren_front.jpg" height="558" style="width:100%">
-            <div class="test">
-                <p>At day...</p>
-            </div>
+        <div class="member_infos_texte">
+            <p>For 10£ a month, become a Member of Saith Seren to help promote the Welsh culture and language!</p>
         </div>
-
-        <div class="images">
-            <img src="img/saith_night.jpg" style="width:100%">
-            <div class="test">
-                <p>...and at might!</p>
-            </div>
-        </div>
-
-    </div>
-
 
    </section>
 
+   <section class="logo_bouton">
 
-    <section class="membership">
-        <div class="askmember">
-            <p>Become a member NOW!</p>
+        <div class="imglogowelcome">
+            <img src="img/SaithSerenLogo-removebg-preview.png">
         </div>
 
-        <a href="membership.html"><button class="boutMem">Learn More</button></a>
+        <button class="boutMem2" onclick="window.location.href='https://dashboard.gocardless.com/api/template_plans/0W524VDJMK/paylink'">Donate</button>
 
+   </section>
 
-    </section>
 
     <section class="footer">
         <div class="lefttext">
