--- a/homepage.html
+++ b/homepage.html
@@ -21,12 +21,12 @@
                     <nav>
                         <div class="menu_nav">
                             <ul>
-                                <li><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></li>
+                                <li><a href="#"><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></a></li>
                                 <li><a href="#">Home</a></li>
                                 <li><a href="aboutus.html">About Us</a></li>
                                 <li><a href="">Pictures</a></li>
                                 <li><a href="">Calendar</a></li>
-                                <li><a href="">Become a Member</a></li>
+                                <li><a href="membership.html">Become a Member</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -106,7 +106,7 @@
             <p>Become a member NOW!</p>
         </div>
 
-        <button class="boutMem">Learn More</button>
+        <a href="membership.html"><button class="boutMem">Learn More</button></a>
 
 
     </section>
