Updates to all pages
Updates to link + Pictures page

--- a/w_PicturesPage.html
+++ b/w_PicturesPage.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <title>Dod yn aelod - Saith Seren</title>
-    <link rel="stylesheet" href="membership.css"> 
+    <title>Lluniau - Saith Seren</title>
+    <link rel="stylesheet" href="PicturesPage.css"> 
 </head>
 <body>
 
@@ -25,43 +25,71 @@
                                 <li><a href="w_homepage.html"><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></a></li>
                                 <li><a href="w_homepage.html">Cartref</a></li>
                                 <li><a href="w_aboutus.html">Amdanom ni</a></li>
-                                <li><a href="w_PicturesPage.html">Lluniau</a></li>
+                                <li><a href="#">Lluniau</a></li>
                                 <li><a href="">Calendr</a></li>
-                                <li><a href="#">Dod yn aelod</a></li>
-                                <li><a href="membership.html"><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
+                                <li><a href="w_membership.html">Dod yn aelod</a></li>
+                                <li><a href="PicturesPage.html"><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
                                 <li><a href="#"><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
                             </ul>
                         </div>
                     </nav>
                 </header>
             </div>
-
-            <div class="member_titre">
-                <p>Dod yn aelod</p>
+			
+			<br>
+			<br>
+			<br>
+			
+            <div class="aboutus_titre">
+                <p>Lluniau</p>
             </div>
 
-            </div>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			
+			<section class="carousel">
+				<ul class="carousel-items">
+					<li class="carousel-item">
+						<div class="card">
+							<img src="photo1.jpg" style="width:600px;height:400px;"/>
+						</div>
+					</li>
+					<li class="carousel-item">
+						<div class="card">
+							<img src="photo2.jpg" style="width:600px;height:400px;"/>
+
+						</div>
+					</li>
+					<li class="carousel-item">
+						<div class="card">
+							<img src="photo3.jpg" style="width:600px;height:400px;" />
+
+						</div>
+					</li>
+				</ul>
+			</section>
+			
+         </div>
+		 
+		
+
     </section>
+	
 
-   <section class="member_infos">
 
-        <div class="member_infos_texte">
-            <p>Am 10£ y mis, dewch yn Aelod o Saith Seren i helpu i hyrwyddo'r diwylliant a'r iaith Gymraeg!</p>
+
+    <section class="membership">
+        <div class="askmember">
+            <p>Dod yn Aelod NAWR!</p>
         </div>
 
-   </section>
-
-   <section class="logo_bouton">
-
-        <div class="imglogowelcome">
-            <img src="img/SaithSerenLogo-removebg-preview.png">
-        </div>
-
-        <button class="boutMem2" onclick="window.location.href='https://dashboard.gocardless.com/api/template_plans/0W524VDJMK/paylink'">Rhoddi</button>
-
-   </section>
+        <a href="membership.html"><button class="boutMem">Dysgu mwy</button></a>
 
 
+    </section>
     <section class="footer">
         <div class="lefttext">
             <p>Y Saith Seren<br>
