--- a/w_aboutus.html
+++ b/w_aboutus.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <title>HomePage - Saith Seren</title>
+    <title>Amdanom ni - Saith Seren</title>
     <link rel="stylesheet" href="aboutus.css"> 
 </head>
 <body>
@@ -22,14 +22,14 @@
                     <nav>
                         <div class="menu_nav">
                             <ul>
-                                <li><a href="homepage.html"><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></a></li>
-                                <li><a href="homepage.html">Home</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="">Pictures</a></li>
-                                <li><a href="">Calendar</a></li>
-                                <li><a href="membership.html">Become a Member</a></li>
-                                <li><a href=""><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
-                                <li><a href=""><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
+                                <li><a href="w_homepage.html"><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></a></li>
+                                <li><a href="w_homepage.html">Cartref</a></li>
+                                <li><a href="#">Amdanom ni</a></li>
+                                <li><a href="w_PicturesPage.html">Lluniau</a></li>
+                                <li><a href="">Calendr</a></li>
+                                <li><a href="w_membership.html">Dod yn aelod</a></li>
+                                <li><a href="aboutus.html"><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
+                                <li><a href="#"><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
                             </ul>
                         </div>
                     </nav>
@@ -37,15 +37,15 @@
             </div>
 
             <div class="aboutus_titre">
-                <p>About Us</p>
+                <p>Amdanom ni</p>
             </div>
 
 
             <div class="gauche">
-                <p>Opening Hours<br>
-                Monday - Friday:<br>
+                <p>Oriau agor<br>
+                Dydd Llun - Dydd Gwener:<br>
                 4:30 - 11:00<br>
-                Saturday:<br>
+                Dydd Sadwrn:<br>
                 12:00 - Midnight</p>
             </div>
             <div class="milieu">
@@ -68,7 +68,7 @@
    <section class="photos">
 
     <div class="photos_titre">
-        <p>Photos of our Building!</p>
+        <p>Lluniau o'n hadeilad!</p>
     </div>
 
 
@@ -76,14 +76,14 @@
         <div class="images">
             <img src="img/Saith_Seren_front.jpg" height="558" style="width:100%">
             <div class="test">
-                <p>At day...</p>
+                <p>Dydd</p>
             </div>
         </div>
 
         <div class="images">
             <img src="img/saith_night.jpg" style="width:100%">
             <div class="test">
-                <p>...and at might!</p>
+                <p>nos!</p>
             </div>
         </div>
 
@@ -95,10 +95,10 @@
 
     <section class="membership">
         <div class="askmember">
-            <p>Become a member NOW!</p>
+            <p>Dod yn Aelod NAWR!</p>
         </div>
 
-        <a href="membership.html"><button class="boutMem">Learn More</button></a>
+        <a href="membership.html"><button class="boutMem">Dysgu mwy</button></a>
 
 
     </section>
@@ -113,10 +113,10 @@
         </div>
 
         <div class="righttext">
-            <p>Follow us on Facebook!<br>
-            Contact us by Mail:<br>
+            <p>Dilynwch ni ar facebook!<br>
+            Cysylltwch â ni trwy e-bost:<br>
             7seren@gmail.com<br>
-            Or use our contact form!<br>
+            Neu defnyddiwch ein ffurflen gyswllt!<br>
             lien</p>
         </div>
     </div>
