--- a/w_homepage.html
+++ b/w_homepage.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <title>HomePage - Saith Seren</title>
+    <title>Hafan - Saith Seren</title>
     <link rel="stylesheet" href="homepage.css"> 
 </head>
 <body>
@@ -23,13 +23,13 @@
                         <div class="menu_nav">
                             <ul>
                                 <li><a href="#"><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></a></li>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="aboutus.html">About Us</a></li>
-                                <li><a href="">Pictures</a></li>
-                                <li><a href="">Calendar</a></li>
-                                <li><a href="membership.html">Become a Member</a></li>
-                                <li><a href=""><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
-                                <li><a href=""><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
+                                <li><a href="#">Cartref</a></li>
+                                <li><a href="w_aboutus.html">Amdanom ni</a></li>
+                                <li><a href="w_PicturesPage.html">Lluniau</a></li>
+                                <li><a href="">Calendr</a></li>
+                                <li><a href="w_membership.html">Dod yn aelod</a></li>
+                                <li><a href="homepage.html"><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
+                                <li><a href="#"><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
                             </ul>
                         </div>
                     </nav>
@@ -37,7 +37,7 @@
             </div>
 
             <div class="welcome">
-                <p>Welcome to Saith Seren!</p>
+                <p>Croeso i Saith Seren!</p>
             </div>
 
             <div class="imglogowelcome">
@@ -54,10 +54,10 @@
         </div>
 
         <div class="gauche">
-            <p>Opening Hours<br>
-            Monday - Friday:<br>
+            <p>Oriau agor<br>
+            Dydd Llun - Dydd Gwener:<br>
             4:30 - 11:00<br>
-            Saturday:<br>
+            Dydd Sadwrn:<br>
             12:00 - Midnight</p>
         </div>
         <div class="milieu">
@@ -76,28 +76,28 @@
     <section class="offres">
 
     <div class="proposals">
-        <p>What are we proposing?</p>
+        <p>Beth ydym yn ei gynnig?</p>
     </div>
 
     <div class="row">
         <div class="images">
             <img src="img/food.jpg" width="450" height="250">
             <div class="test">
-                <p>Food</p>
+                <p>Bwyd</p>
             </div>
         </div>
 
         <div class="images">
             <img src="img/boisson.jpg" width="450" height="250">
             <div class="test">
-                <p>Drinks</p>
+                <p>Diodydd</p>
             </div>
         </div>
 
         <div class="images">
             <img src="img/sport.jpg" width="450" height="250">
             <div class="test">
-                <p>Sports</p>
+                <p>Chwaraeon</p>
             </div>
         </div>
     </div>
@@ -106,10 +106,10 @@
 
     <section class="membership">
         <div class="askmember">
-            <p>Become a member NOW!</p>
+            <p>Dod yn Aelod NAWR!</p>
         </div>
 
-        <a href="membership.html"><button class="boutMem">Learn More</button></a>
+        <a href="membership.html"><button class="boutMem">Dysgu mwy</button></a>
 
 
     </section>
@@ -124,10 +124,10 @@
         </div>
 
         <div class="righttext">
-            <p>Follow us on Facebook!<br>
-            Contact us by Mail:<br>
+            <p>Dilynwch ni ar facebook!<br>
+            Cysylltwch â ni trwy e-bost:<br>
             7seren@gmail.com<br>
-            Or use our contact form!<br>
+            Neu defnyddiwch ein ffurflen gyswllt!<br>
             lien</p>
         </div>
     </div>
