--- a/PicturesPage.html
+++ b/PicturesPage.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <title>HomePage - Saith Seren</title>
     <link rel="stylesheet" href="PicturesPage.css"> 
 </head>
@@ -24,9 +25,11 @@
                                 <li><a href="homepage.html"><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></a></li>
                                 <li><a href="homepage.html">Home</a></li>
                                 <li><a href="#">About Us</a></li>
-                                <li><a href="">Pictures</a></li>
+                                <li><a href="#">Pictures</a></li>
                                 <li><a href="">Calendar</a></li>
                                 <li><a href="membership.html">Become a Member</a></li>
+                                <li><a href="#"><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
+                                <li><a href="w_PicturesPage.html"><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
                             </ul>
                         </div>
                     </nav>
