--- a/membership.html
+++ b/membership.html
@@ -25,11 +25,11 @@
                                 <li><a href="homepage.html"><img src="img/SaithSerenLogo-removebg-preview.png" width="50" height="27"></a></li>
                                 <li><a href="homepage.html">Home</a></li>
                                 <li><a href="aboutus.html">About Us</a></li>
-                                <li><a href="">Pictures</a></li>
+                                <li><a href="PicturesPage.html">Pictures</a></li>
                                 <li><a href="">Calendar</a></li>
                                 <li><a href="membership.html">Become a Member</a></li>
-                                <li><a href=""><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
-                                <li><a href=""><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
+                                <li><a href="#"><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
+                                <li><a href="w_membership.html"><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
                             </ul>
                         </div>
                     </nav>
