Google Maps integration
Google maps Integration + bug fixes

--- a/homepage.html
+++ b/homepage.html
@@ -68,7 +68,7 @@
             Tel: 01978 447006</p>
         </div>
         <div class="maps">
-
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2398.5101635066153!2d-2.991449883781709!3d53.047140275507786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ac71d2fc0a0cb%3A0x3fc094f30db4bbaa!2sSaith%20Seren!5e0!3m2!1sfr!2suk!4v1670964409305!5m2!1sfr!2suk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
