--- a/w_homepage.html
+++ b/w_homepage.html
@@ -50,7 +50,7 @@
     <section class="aboutus">
 
         <div class="aboutus_titre">
-            <p>About Us</p>
+            <p>Amdanom ni</p>
         </div>
 
         <div class="gauche">
