--- a/PicturesPage.html
+++ b/PicturesPage.html
@@ -69,6 +69,26 @@
 
 						</div>
 					</li>
+					<li class="carousel-item">
+						<div class="card">
+							<img src="photo4.jpg" style="width:600px;height:400px;" />
+
+						</div>
+					</li>
+					<li class="carousel-item">
+						<div class="card">
+							<img src="photo5.jpg" style="width:600px;height:400px;" />
+
+						</div>
+					</li>
+					<li class="carousel-item">
+						<div class="card">
+							<img src="photo6.jpg" style="width:600px;height:400px;" />
+
+						</div>
+					</li>
+					
+					
 				</ul>
 			</section>
 			
