--- a/homepage.html
+++ b/homepage.html
@@ -26,7 +26,7 @@
                                 <li><a href="#">Home</a></li>
                                 <li><a href="aboutus.html">About Us</a></li>
                                 <li><a href="PicturesPage.html">Pictures</a></li>
-                                <li><a href="">Calendar</a></li>
+                                <li><a href="calendar.php">Calendar</a></li>
                                 <li><a href="membership.html">Become a Member</a></li>
                                 <li><a href="#"><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
                                 <li><a href="w_homepage.html"><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
