--- a/w_membership.html
+++ b/w_membership.html
@@ -26,7 +26,7 @@
                                 <li><a href="w_homepage.html">Cartref</a></li>
                                 <li><a href="w_aboutus.html">Amdanom ni</a></li>
                                 <li><a href="w_PicturesPage.html">Lluniau</a></li>
-                                <li><a href="">Calendr</a></li>
+                                <li><a href="calendar.php">Calendr</a></li>
                                 <li><a href="#">Dod yn aelod</a></li>
                                 <li><a href="membership.html"><i class="em em-gb" aria-role="presentation" aria-label="United Kingdom Flag"></i></a></li>
                                 <li><a href="#"><i class="em em-flag-wales" aria-role="presentation" aria-label="Wales Flag"></i></a></li>
